force-app/main/default/objects/Custom_Pricing_Request__c/Custom_Pricing_Request__c.object-meta.xml
<CustomObject>
    <description>Phase 2 -  object that contains the special price request check list.</description>
    <label>Customised Pricing Request</label>
    <nameField>
        <displayFormat>CPR-{00000}</displayFormat>
        <label>Customised Price Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customised Pricing Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>