force-app/main/default/objects/Custom_Pricing_Request__c/fields/Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Special_Price_Requests_del</relationshipName>
    <type>Lookup</type>
</CustomField>