force-app/main/default/objects/Custom_Pricing_Request__c/fields/ComOps_Reports_Attached__c.field-meta.xml
<CustomField>
    <fullName>ComOps_Reports_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ComOps Reports Attached</label>
    <type>Checkbox</type>
</CustomField>