force-app/main/default/objects/Custom_Pricing_Request__c/fields/eParcel_Call_for_Returns__c.field-meta.xml
<CustomField>
    <fullName>eParcel_Call_for_Returns__c</fullName>
    <label>eParcel Call for Returns</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>