force-app/main/default/objects/Custom_Pricing_Request__c/fields/Product_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Approval_Date__c</fullName>
    <description>Sprint 2</description>
    <label>Product Approval Date</label>
    <type>DateTime</type>
</CustomField>