force-app/main/default/objects/Custom_Pricing_Request__c/fields/Product_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Product_Specialist__c</fullName>
    <label>Product Specialist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>