force-app/main/default/objects/Custom_Pricing_Request__c/fields/Sales_Force_Op_Number__c.field-meta.xml
<CustomField>
    <fullName>Sales_Force_Op_Number__c</fullName>
    <label>Sales Force Op Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>