force-app/main/default/objects/Custom_Pricing_Request__c/fields/What_is_the_lodgement_point_for_new_cuto__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_lodgement_point_for_new_cuto__c</fullName>
    <label>Lodgement Point for Special Pricing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>