force-app/main/default/objects/Custom_Pricing_Request__c/recordTypes/Communication_Mail_Services.recordType-meta.xml
<RecordType>
    <fullName>Communication_Mail_Services</fullName>
    <active>true</active>
    <description>This request is to be used for Communication Mail Services Custom Pricing Requests.</description>
    <label>Communication Mail Services</label>
</RecordType>