force-app/main/default/objects/Custom_Pricing_Request__c/recordTypes/Parcel_Express_Services.recordType-meta.xml
<RecordType>
    <fullName>Parcel_Express_Services</fullName>
    <active>true</active>
    <description>This request is to be used for Parcel &amp; Express Services Custom Pricing Requests.</description>
    <label>Parcel &amp; Express Services</label>
</RecordType>