force-app/main/default/objects/Custom_Pricing_Request__c/recordTypes/Retail.recordType-meta.xml
<RecordType>
    <fullName>Retail</fullName>
    <active>true</active>
    <description>This request is to be used for Retail Custom Pricing Requests.</description>
    <label>Retail</label>
</RecordType>