force-app/main/default/objects/Custom_Pricing_Request__c/validationRules/Phase2_No_Pricing_Specialist.validationRule-meta.xml
<ValidationRule>
    <fullName>Phase2_No_Pricing_Specialist</fullName>
    <active>true</active>
    <description>Phase 2</description>
    <errorConditionFormula>AND ( ISPICKVAL( Pricing_Specialist_Required__c , &quot;Yes&quot;) ,  Pricing_Specialist__c = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Pricing_Specialist__c</errorDisplayField>
    <errorMessage>You must choose a Pricing Specialist</errorMessage>
</ValidationRule>