force-app/main/default/objects/Custom_Pricing_Request__c/validationRules/Phase_2_Multi_Business_Unit.validationRule-meta.xml
<ValidationRule>
    <fullName>Phase_2_Multi_Business_Unit</fullName>
    <active>true</active>
    <description>Phase 2 - If Business Unit = Multi Unit, User needs to select Yes in the Solution Specialist required.</description>
    <errorConditionFormula>AND ( 
ISPICKVAL( Business_Unit__c , &quot;Multi Business Unit&quot;), 
ISPICKVAL(  Solution_Specialist_Required__c , &quot;No&quot;)
)</errorConditionFormula>
    <errorDisplayField>Solution_Specialist_Required__c</errorDisplayField>
    <errorMessage>Multi Business Unit requires a Solution Specialist.</errorMessage>
</ValidationRule>