force-app/main/default/objects/Custom_Pricing_Request__c/validationRules/Phase_2_No_Product_Specialist.validationRule-meta.xml
<ValidationRule>
    <fullName>Phase_2_No_Product_Specialist</fullName>
    <active>true</active>
    <description>Phase 2</description>
    <errorConditionFormula>AND(ISPICKVAL( Solution_Specialist_Required__c , &quot;No&quot;),  Product_Approver__c =&quot;&quot;, NOT(ISPICKVAL( Business_Unit__c ,&quot;Multi Business Unit&quot;)))</errorConditionFormula>
    <errorDisplayField>Product_Approver__c</errorDisplayField>
    <errorMessage>You must choose a Product Specialist</errorMessage>
</ValidationRule>