force-app/main/default/objects/Custom_Pricing_Request__c/validationRules/Phase_2_No_Solution_Specialist.validationRule-meta.xml
<ValidationRule>
    <fullName>Phase_2_No_Solution_Specialist</fullName>
    <active>true</active>
    <description>Phase 2</description>
    <errorConditionFormula>AND(ISPICKVAL(Solution_Specialist_Required__c , &quot;Yes&quot;) ,  Solution_Specialist__c = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Solution_Specialist__c</errorDisplayField>
    <errorMessage>You must choose a Solution Specialist</errorMessage>
</ValidationRule>