force-app/main/default/objects/Custom_Pricing_Request__c/validationRules/Phase_2_Opportunity_Stage_Lessthan_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Phase_2_Opportunity_Stage_Lessthan_2</fullName>
    <active>true</active>
    <description>PHASE 2 - This rule will prevent the user from creating a Custom Pricing if the Opportunity is &lt;= Stage 2</description>
    <errorConditionFormula>OR( ISPICKVAL(Opportunity__r.StageName , &quot;Noticed&quot;), ISPICKVAL(Opportunity__r.StageName , &quot;Identified&quot;))</errorConditionFormula>
    <errorMessage>A Custom Pricing Request cannot be raised for an Identified or Noticed Opportunity</errorMessage>
</ValidationRule>