force-app/main/default/objects/Custom_Pricing_Request__c/validationRules/Phase_2_Required_Close_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Phase_2_Required_Close_Date</fullName>
    <active>true</active>
    <description>This rule will ensure that the Required Close Date is &gt;= 3 days from the Current Date</description>
    <errorConditionFormula>AND(  ISNEW(), (Required_Close_Date__c - TODAY () ) &lt;= 3)</errorConditionFormula>
    <errorDisplayField>Required_Close_Date__c</errorDisplayField>
    <errorMessage>Required Close Date must be greater than 3 days from Today.</errorMessage>
</ValidationRule>